opam-version: "1.2"
maintainer: "ohno@somerandomidiot.com"
authors: []
homepage: ""
bug-reports: ""
dev-repo: ""
license: "MIT"
build:
[[ "make" ]]
available: [ ocaml-version >= "4.05" ]
depends: [
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "topkg" {build & >= "0.7.4"}
  "ppx_deriving" { >= "4.2" }
  "crowbar"
]
