opam-version: "1.2"
maintainer: "ohno@somerandomidiot.com"
authors: ["don't worry about it"]
homepage: "https://somerandomidiot.com"
bug-reports: "https://github.com/yomimono/ppx_deriving_crowbar/issues"
dev-repo: "https://github.com/yomimono/ppx_deriving_crowbar.git"
license: "MIT"
build:
[[ "make" ]]
available: [ ocaml-version >= "4.05.0" & ocaml-version < "4.06.0" ]
depends: [
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ppx_deriving" { = "4.1.5" }
  "ppx_tools"
  "crowbar"
]
