opam-version: "1.2"
maintainer: "maintenance@identity-function.com"
authors: ["Mindy Preston"]
homepage: "https://github.com/yomimono/ppx_deriving_crowbar"
bug-reports: "https://github.com/yomimono/ppx_deriving_crowbar/issues"
dev-repo: "https://github.com/yomimono/ppx_deriving_crowbar.git"
license: "MIT"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
available: [ ocaml-version >= "4.06.0" ]
depends: [
  "dune" {build & >= "1.3.0"}
  "ppxfind" {build}
  "ppx_deriving" {>= "4.1.5" }
  "ppx_tools"
  "crowbar"
]
