(library
 (public_name ppx_deriving_crowbar)
 (modules ppx_deriving_crowbar)
 (synopsis "[@@deriving crowbar]")
 (kind ppx_deriver)
 (libraries ppx_deriving.api)
 (preprocess (action (run ppxfind -legacy ppx_tools.metaquot --as-pp %{input-file})))
 (ppx_runtime_libraries ppx_deriving_crowbar.runtime)
 (flags :standard -w a@5@8@10@11@12@14@23@24@26@29@40)
)

(library
 (name ppx_deriving_crowbar_runtime)
 (public_name ppx_deriving_crowbar.runtime)
 (synopsis "Runtime components of [@@deriving crowbar]")
 (modules ppx_deriving_crowbar_runtime)
 (libraries ppx_deriving.runtime)
)
